[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growt-wandb"
version = "0.1.0"
description = "Growt structural audit for Weights & Biases — training callback, artifact metadata, and registry gate"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.9"
dependencies = [
    "growt-client>=0.2.0",
    "wandb>=0.16",
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.setuptools.packages.find]
include = ["growt_wandb*"]
